lib/wrapper.h

#include <stdint.h>

long bar_function(long x);

long max_impl(long num1, long num2);

long day0a(const char *text);
long day0b(const char *text);
long day0c(const char *text);
long day0d(const char *text);

long day01a(const char *text);
long day01b(const char *text);

long day02a(const char *text);
long day02b(const char *text);

long day03a(const char *text);
long day03b(const char *text);